--- a/CSU/config/base.cfg
+++ b/CSU/config/base.cfg
@@ -18,36 +18,36 @@ ActionFireFighting.PathPlanning : CSU_Yunlu_2019.module.algorithm.AStarPathPlann
 ActionTransport.PathPlanning : CSU_Yunlu_2019.module.algorithm.AStarPathPlanning
 
 #CommandExecutor
-TacticsFireBrigade.CommandExecutorFire :  CSU_Yunlu_2019.centralized.Fire.FB_CommandExecutorFire
-TacticsFireBrigade.CommandExecutorScout :  CSU_Yunlu_2019.centralized.Fire.FB_CommandExecutorScout
+TacticsFireBrigade.CommandExecutorFire :  CSU_Yunlu_2019.centralized.fire.CommandExecutorFire
+TacticsFireBrigade.CommandExecutorScout :  CSU_Yunlu_2019.centralized.fire.CommandExecutorScout
 
-TacticsPoliceForce.CommandExecutorPolice :  CSU_Yunlu_2019.centralized.Police.PF_CommandExecutorPolice
-TacticsPoliceForce.CommandExecutorScout :  CSU_Yunlu_2019.centralized.Police.PF_CommandExecutorScoutPolice
+TacticsPoliceForce.CommandExecutorPolice :  CSU_Yunlu_2019.centralized.police.CommandExecutorPolice
+TacticsPoliceForce.CommandExecutorScout :  CSU_Yunlu_2019.centralized.police.CommandExecutorScoutPolice
 
-TacticsAmbulanceTeam.CommandExecutorAmbulance :  CSU_Yunlu_2019.centralized.Ambulance.AT_CommandExecutorAmbulance
-TacticsAmbulanceTeam.CommandExecutorScout :  CSU_Yunlu_2019.centralized.Ambulance.AT_CommandExecutorScout
+TacticsAmbulanceTeam.CommandExecutorAmbulance :  CSU_Yunlu_2019.centralized.ambulance.CommandExecutorAmbulance
+TacticsAmbulanceTeam.CommandExecutorScout :  CSU_Yunlu_2019.centralized.ambulance.CommandExecutorScout
 
 #ExtAction
-CommandExecutorFire.ActionFireFighting : CSU_Yunlu_2019.extaction.fb.FB_ActionFireFighting
-CommandExecutorFire.ActionExtMove : CSU_Yunlu_2019.extaction.fb.FB_ActionExtMove
-TacticsFireBrigade.ActionFireFighting : CSU_Yunlu_2019.extaction.fb.FB_ActionFireFighting
-TacticsFireBrigade.ActionExtMove : CSU_Yunlu_2019.extaction.fb.FB_ActionExtMove
+CommandExecutorFire.ActionFireFighting : CSU_Yunlu_2019.extaction.fb.ActionFireFighting
+CommandExecutorFire.ActionExtMove : CSU_Yunlu_2019.extaction.fb.ActionExtMove
+TacticsFireBrigade.ActionFireFighting : CSU_Yunlu_2019.extaction.fb.ActionFireFighting
+TacticsFireBrigade.ActionExtMove : CSU_Yunlu_2019.extaction.fb.ActionExtMove
 
-CommandExecutorAmbulance.ActionTransport : CSU_Yunlu_2019.extaction.at.AT_ActionTransport
-CommandExecutorAmbulance.ActionExtMove : CSU_Yunlu_2019.extaction.at.AT_ActionExtMove
-TacticsAmbulanceTeam.ActionTransport : CSU_Yunlu_2019.extaction.at.AT_ActionTransport
-TacticsAmbulanceTeam.ActionExtMove : CSU_Yunlu_2019.extaction.at.AT_ActionExtMove
+CommandExecutorAmbulance.ActionTransport : CSU_Yunlu_2019.extaction.at.ActionTransport
+CommandExecutorAmbulance.ActionExtMove : CSU_Yunlu_2019.extaction.at.ActionExtMove
+TacticsAmbulanceTeam.ActionTransport : CSU_Yunlu_2019.extaction.at.ActionTransport
+TacticsAmbulanceTeam.ActionExtMove : CSU_Yunlu_2019.extaction.at.ActionExtMove
 
-TacticsPoliceForce.ActionExtClear : CSU_Yunlu_2019.extaction.pf.PF_ActionExtClear
-TacticsPoliceForce.ActionExtMove : CSU_Yunlu_2019.extaction.pf.PF_ActionExtMove
-CommandExecutorPolice.ActionExtClear : CSU_Yunlu_2019.extaction.pf.PF_ActionExtClear
-CommandExecutorPolice.ActionExtMove : CSU_Yunlu_2019.extaction.pf.PF_ActionExtMove
-CommandExecutorScoutPolice.ActionExtClear : CSU_Yunlu_2019.extaction.pf.PF_ActionExtClear
+TacticsPoliceForce.ActionExtClear : CSU_Yunlu_2019.extaction.pf.ActionExtClear
+TacticsPoliceForce.ActionExtMove : CSU_Yunlu_2019.extaction.pf.ActionExtMove
+CommandExecutorPolice.ActionExtClear : CSU_Yunlu_2019.extaction.pf.ActionExtClear
+CommandExecutorPolice.ActionExtMove : CSU_Yunlu_2019.extaction.pf.ActionExtMove
+CommandExecutorScoutPolice.ActionExtClear : CSU_Yunlu_2019.extaction.pf.ActionExtClear
 
 #CommandPicker
-TacticsAmbulanceCentre.CommandPicker :  CSU_Yunlu_2019.centralized.Ambulance.AT_CommandPickerAmbulance
-TacticsFireStation.CommandPicker : CSU_Yunlu_2019.centralized.Fire.FB_CommandPickerFire
-TacticsPoliceOffice.CommandPicker :  CSU_Yunlu_2019.centralized.Police.PF_CommandPickerPolice
+TacticsAmbulanceCentre.CommandPicker :  CSU_Yunlu_2019.centralized.ambulance.CommandPickerAmbulance
+TacticsFireStation.CommandPicker : CSU_Yunlu_2019.centralized.fire.CommandPickerFire
+TacticsPoliceOffice.CommandPicker :  CSU_Yunlu_2019.centralized.police.CommandPickerPolice
 
 
 
