--- a/CSU/config/target.cfg
+++ b/CSU/config/target.cfg
@@ -1,23 +1,23 @@
 #target
-TacticsAmbulanceTeam.HumanDetector : CSU_Yunlu_2019.module.complex.at.AT_CSUatHumanDetector
-TacticsAmbulanceTeam.Search : CSU_Yunlu_2019.module.complex.at.AT_CSUatSearchForFire
-TacticsAmbulanceCentre.TargetAllocator : CSU_Yunlu_2019.module.complex.center.AT_TestAmbulanceTargetAllocator
+TacticsAmbulanceTeam.HumanDetector : CSU_Yunlu_2019.module.complex.at.CSUHumanDetector
+TacticsAmbulanceTeam.Search : CSU_Yunlu_2019.module.complex.at.CSUSearchForFire
+TacticsAmbulanceCentre.TargetAllocator : CSU_Yunlu_2019.module.complex.center.TestAmbulanceTargetAllocator
 
-TacticsFireBrigade.BuildingDetector : CSU_Yunlu_2019.module.complex.fb.FB_CSUfbBuildingDetector
-TacticsFireBrigade.Search : CSU_Yunlu_2019.module.complex.fb.FB_CSUfbSearchForFire
-TacticsFireStation.TargetAllocator : CSU_Yunlu_2019.module.complex.center.FB_TestFireTargetAllocator
+TacticsFireBrigade.BuildingDetector : CSU_Yunlu_2019.module.complex.fb.CSUBuildingDetector
+TacticsFireBrigade.Search : CSU_Yunlu_2019.module.complex.fb.CSUSearchForFire
+TacticsFireStation.TargetAllocator : CSU_Yunlu_2019.module.complex.center.TestFireTargetAllocator
 
-TacticsPoliceForce.RoadDetector : CSU_Yunlu_2019.module.complex.pf.PF_CSUpfRoadDetector
-TacticsPoliceForce.Search : CSU_Yunlu_2019.module.complex.pf.PF_CSUpfSearchForFire
-TacticsPoliceOffice.TargetAllocator : CSU_Yunlu_2019.module.complex.center.PF_TestPoliceTargetAllocator
+TacticsPoliceForce.RoadDetector : CSU_Yunlu_2019.module.complex.pf.CSURoadDetector
+TacticsPoliceForce.Search : CSU_Yunlu_2019.module.complex.pf.CSUSearchForFire
+TacticsPoliceOffice.TargetAllocator : CSU_Yunlu_2019.module.complex.center.TestPoliceTargetAllocator
 
 #Clustering
-CSUatHumanDetector.Clustering : CSU_Yunlu_2019.module.algorithm.at.AT_SampleKMeans
-TestSearch.Clustering.Ambulance : CSU_Yunlu_2019.module.algorithm.at.AT_SampleKMeans
-CSUfbBuildingDetector.Clustering : CSU_Yunlu_2019.module.algorithm.fb.FB_SampleKMeans
-TestSearch.Clustering.Fire : CSU_Yunlu_2019.module.algorithm.fb.FB_SampleKMeans
-CSUpfRoadDetector.Clustering : CSU_Yunlu_2019.module.algorithm.pf.PF_SampleKMeans
-TestSearch.Clustering.Police : CSU_Yunlu_2019.module.algorithm.pf.PF_SampleKMeans
+CSUatHumanDetector.Clustering : CSU_Yunlu_2019.module.algorithm.at.SampleKMeans
+TestSearch.Clustering.Ambulance : CSU_Yunlu_2019.module.algorithm.at.SampleKMeans
+CSUfbBuildingDetector.Clustering : CSU_Yunlu_2019.module.algorithm.fb.SampleKMeans
+TestSearch.Clustering.Fire : CSU_Yunlu_2019.module.algorithm.fb.SampleKMeans
+CSUpfRoadDetector.Clustering : CSU_Yunlu_2019.module.algorithm.pf.SampleKMeans
+TestSearch.Clustering.Police : CSU_Yunlu_2019.module.algorithm.pf.SampleKMeans
 
 
 
