--- a/CSU/config/target.cfg
+++ b/CSU/config/target.cfg
@@ -1,6 +1,6 @@
 #target
 TacticsAmbulanceTeam.HumanDetector : CSU_Yunlu_2019.module.complex.at.CSUHumanDetector
-TacticsAmbulanceTeam.Search : CSU_Yunlu_2019.module.complex.at.CSUSearchForFire
+TacticsAmbulanceTeam.Search : CSU_Yunlu_2019.module.complex.at.CSUSearch
 TacticsAmbulanceCentre.TargetAllocator : CSU_Yunlu_2019.module.complex.center.TestAmbulanceTargetAllocator
 
 TacticsFireBrigade.BuildingDetector : CSU_Yunlu_2019.module.complex.fb.CSUBuildingDetector
