--- a/CSU/config/base.cfg
+++ b/CSU/config/base.cfg
@@ -1,18 +1,18 @@
 #Path Planning
 PathPlanning.Default : CSU_Yunlu_2019.module.algorithm.AStarPathPlanning
-RoadDetector.PathPlanning : CSU_Yunlu_2019.module.algorithm.AStarPathPlanning
+RoadDetector.PathPlanning : CSU_Yunlu_2019.module.algorithm.pf.AStarPathPlanning
 
 SampleSearch.PathPlanning.Ambulance : CSU_Yunlu_2019.module.algorithm.AStarPathPlanning
 SampleSearch.PathPlanning.Fire : CSU_Yunlu_2019.module.algorithm.AStarPathPlanning
-SampleSearch.PathPlanning.Police : CSU_Yunlu_2019.module.algorithm.AStarPathPlanning
+SampleSearch.PathPlanning.Police : CSU_Yunlu_2019.module.algorithm.pf.AStarPathPlanning
 
 CommandExecutorAmbulance.PathPlanning : CSU_Yunlu_2019.module.algorithm.AStarPathPlanning
 CommandExecutorFire.PathPlanning : CSU_Yunlu_2019.module.algorithm.AStarPathPlanning
-CommandExecutorPolice.PathPlanning : CSU_Yunlu_2019.module.algorithm.AStarPathPlanning
+CommandExecutorPolice.PathPlanning : CSU_Yunlu_2019.module.algorithm.pf.AStarPathPlanning
 CommandExecutorScout.PathPlanning : CSU_Yunlu_2019.module.algorithm.AStarPathPlanning
-CommandExecutorScoutPolice.PathPlanning : CSU_Yunlu_2019.module.algorithm.AStarPathPlanning
+CommandExecutorScoutPolice.PathPlanning : CSU_Yunlu_2019.module.algorithm.pf.AStarPathPlanning
 
-ActionExtClear.PathPlanning : CSU_Yunlu_2019.module.algorithm.AStarPathPlanning
+ActionExtClear.PathPlanning : CSU_Yunlu_2019.module.algorithm.pf.AStarPathPlanning
 ActionExtMove.PathPlanning : CSU_Yunlu_2019.module.algorithm.AStarPathPlanning
 ActionFireFighting.PathPlanning : CSU_Yunlu_2019.module.algorithm.AStarPathPlanning
 ActionTransport.PathPlanning : CSU_Yunlu_2019.module.algorithm.AStarPathPlanning
