--- a/CSU/config/target.cfg
+++ b/CSU/config/target.cfg
@@ -12,13 +12,12 @@ TacticsPoliceForce.Search : CSU_Yunlu_2019.module.complex.pf.CSUSearchForFire
 TacticsPoliceOffice.TargetAllocator : CSU_Yunlu_2019.module.complex.center.TestPoliceTargetAllocator
 
 #Clustering
-CSUatHumanDetector.Clustering : CSU_Yunlu_2019.module.algorithm.at.SampleKMeans
-TestSearch.Clustering.Ambulance : CSU_Yunlu_2019.module.algorithm.at.SampleKMeans
-CSUfbBuildingDetector.Clustering : CSU_Yunlu_2019.module.algorithm.fb.SampleKMeans
-TestSearch.Clustering.Fire : CSU_Yunlu_2019.module.algorithm.fb.SampleKMeans
-CSUpfRoadDetector.Clustering : CSU_Yunlu_2019.module.algorithm.pf.SampleKMeans
-TestSearch.Clustering.Police : CSU_Yunlu_2019.module.algorithm.pf.SampleKMeans
+SampleHumanDetector.Clustering : CSU_Yunlu_2019.module.algorithm.at.SampleKMeans
+SampleSearch.Clustering.Ambulance : CSU_Yunlu_2019.module.algorithm.at.SampleKMeans
 
+SampleBuildingDetector.Clustering : CSU_Yunlu_2019.module.algorithm.fb.SampleKMeans
+SampleSearch.Clustering.Fire : CSU_Yunlu_2019.module.algorithm.fb.SampleKMeans
 
-
+SampleRoadDetector.Clustering : CSU_Yunlu_2019.module.algorithm.pf.SampleKMeans
+SampleSearch.Clustering.Police : adf.sample.module.algorithm.pf.SampleKMeans
 
