修复配置错误

--- a/CSU/config/target.cfg
+++ b/CSU/config/target.cfg
@@ -19,5 +19,5 @@ SampleBuildingDetector.Clustering : CSU_Yunlu_2019.module.algorithm.fb.SampleKMe
 SampleSearch.Clustering.Fire : CSU_Yunlu_2019.module.algorithm.fb.SampleKMeans
 
 SampleRoadDetector.Clustering : CSU_Yunlu_2019.module.algorithm.pf.SampleKMeans
-SampleSearch.Clustering.Police : adf.sample.module.algorithm.pf.SampleKMeans
+SampleSearch.Clustering.Police : CSU_Yunlu_2019.module.algorithm.pf.SampleKMeans
 
