修复凸包获取内部entities为空的bug,修复merge()方法

--- a/CSU/config/target.cfg
+++ b/CSU/config/target.cfg
@@ -15,9 +15,15 @@ TacticsPoliceOffice.TargetAllocator : CSU_Yunlu_2019.module.complex.center.TestP
 SampleHumanDetector.Clustering : CSU_Yunlu_2019.module.algorithm.at.SampleKMeans
 SampleSearch.Clustering.Ambulance : CSU_Yunlu_2019.module.algorithm.at.SampleKMeans
 
-SampleBuildingDetector.Clustering : CSU_Yunlu_2019.module.algorithm.fb.SampleKMeans
+SampleBuildingDetector.Clustering : CSU_Yunlu_2019.module.algorithm.fb.CSUFireClustering
 SampleSearch.Clustering.Fire : CSU_Yunlu_2019.module.algorithm.fb.SampleKMeans
 
 SampleRoadDetector.Clustering : CSU_Yunlu_2019.module.algorithm.pf.SampleKMeans
 SampleSearch.Clustering.Police : CSU_Yunlu_2019.module.algorithm.pf.SampleKMeans
 
+#SampleBuildingDetector.Clustering :         AUR.module.algorithm.AURWorldClusterer
+#SampleHumanDetector.Clustering : 			AUR.module.algorithm.AURWorldClusterer
+#SampleRoadDetector.Clustering : 			AUR.module.algorithm.AURWorldClusterer
+#SampleSearch.Clustering.Ambulance : 		AUR.module.algorithm.AURWorldClusterer
+#SampleSearch.Clustering.Fire : 				AUR.module.algorithm.AURWorldClusterer
+#SampleSearch.Clustering.Police : 			AUR.module.algorithm.AURWorldClusterer
