--- a/CSU/config/target.cfg
+++ b/CSU/config/target.cfg
@@ -21,3 +21,5 @@ SampleSearch.Clustering.Fire : CSU_Yunlu_2019.module.algorithm.fb.SampleKMeans
 SampleRoadDetector.Clustering : CSU_Yunlu_2019.module.algorithm.pf.SampleKMeans
 SampleSearch.Clustering.Police : CSU_Yunlu_2019.module.algorithm.pf.SampleKMeans
 
+WorldHelper.Default : CSU_Yunlu_2019.world.CSUWorldHelper
+WorldHelper.FireBrigade : CSU_Yunlu_2019.world.CSUFireBrigadeWorld
