使用calcStandard进行预计算

--- a/CSU/config/target.cfg
+++ b/CSU/config/target.cfg
@@ -12,14 +12,16 @@ TacticsPoliceForce.Search : CSU_Yunlu_2019.module.complex.pf.CSUSearchForFire
 TacticsPoliceOffice.TargetAllocator : CSU_Yunlu_2019.module.complex.center.TestPoliceTargetAllocator
 
 #Clustering
-SampleHumanDetector.Clustering : CSU_Yunlu_2019.module.algorithm.at.SampleKMeans
-SampleSearch.Clustering.Ambulance : CSU_Yunlu_2019.module.algorithm.at.SampleKMeans
+SampleHumanDetector.Clustering : CSU_Yunlu_2019.module.algorithm.SampleKMeans
+SampleSearch.Clustering.Ambulance : CSU_Yunlu_2019.module.algorithm.SampleKMeans
 
 SampleBuildingDetector.Clustering : CSU_Yunlu_2019.module.algorithm.fb.CSUFireClustering
-SampleSearch.Clustering.Fire : CSU_Yunlu_2019.module.algorithm.fb.SampleKMeans
+SampleSearch.Clustering.Fire : CSU_Yunlu_2019.module.algorithm.SampleKMeans
 
-SampleRoadDetector.Clustering : CSU_Yunlu_2019.module.algorithm.pf.SampleKMeans
-SampleSearch.Clustering.Police : CSU_Yunlu_2019.module.algorithm.pf.SampleKMeans
+SampleRoadDetector.Clustering : CSU_Yunlu_2019.module.algorithm.SampleKMeans
+SampleSearch.Clustering.Police : CSU_Yunlu_2019.module.algorithm.SampleKMeans
+ActionExtClear.Clustering : CSU_Yunlu_2019.module.algorithm.SampleKMeans
 
+#WorldHelper
 WorldHelper.Default : CSU_Yunlu_2019.world.CSUWorldHelper
 WorldHelper.FireBrigade : CSU_Yunlu_2019.world.CSUFireBrigadeWorld
