--- a/visual-debugger/pom.xml
+++ b/visual-debugger/pom.xml
@@ -409,6 +409,7 @@
             <!--</configuration>-->
             <!--</plugin>-->
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
