新增fb的search策略

--- a/CSU/config/target.cfg
+++ b/CSU/config/target.cfg
@@ -28,3 +28,6 @@ WorldHelper.FireBrigade : CSU_Yunlu_2019.world.CSUFireBrigadeWorld
 
 #GraphHelper
 GraphHelper.Default : CSU_Yunlu_2019.world.graph.GraphHelper
+
+#SearchHelper
+SearchHelper.Default : CSU_Yunlu_2019.module.complex.fb.search.SearchHelper
