update priority-based communication strategy

--- a/CSU/config/base.cfg
+++ b/CSU/config/base.cfg
@@ -50,5 +50,8 @@ TacticsFireStation.CommandPicker : CSU_Yunlu_2019.centralized.fire.CommandPicker
 TacticsPoliceOffice.CommandPicker :  CSU_Yunlu_2019.centralized.police.CommandPickerPolice
 
 
+##Comm
+MessageManager.PlatoonChannelSubscriber : CSU_Yunlu_2019.module.comm.CSUChannelSubscriber
+MessageManager.PlatoonMessageCoordinator : CSU_Yunlu_2019.module.comm.CSUMessageCoordinator
 
 
