修改地图的通讯

--- a/maps-2019-modified/Final/Eindhoven2/config/comms.cfg
+++ b/maps-2019-modified/Final/Eindhoven2/config/comms.cfg
@@ -3,4 +3,5 @@
 #!include comms/comms-03-very-limited.cfg
 #!include comms/comms-04-low.cfg
 #!include comms/comms-05-less.cfg
-!include comms/comms-06-none.cfg
+#!include comms/comms-06-none.cfg
+!include comms/comms-07-mixed.cfg
