--- a/maps-2019-modified/Semi/Montreal1/config/comms/comms-02-unreliable.cfg
+++ b/maps-2019-modified/Semi/Montreal1/config/comms/comms-02-unreliable.cfg
@@ -1,4 +1,4 @@
-comms.channels.count: 3
+comms.channels.count: 5
 comms.channels.0.type: voice
 # Range of a voice message in mm
 comms.channels.0.range: 30000
@@ -11,18 +11,32 @@ comms.channels.0.noise.input.dropout.p: 0.1
 
 # Create 2 high-bandwidth, low-reliability channels
 comms.channels.1.type: radio
-comms.channels.1.bandwidth: 3000
+comms.channels.1.bandwidth: 512
 comms.channels.1.noise.input.failure.use: yes
 comms.channels.1.noise.input.failure.p: 0.2
 comms.channels.1.noise.output.dropout.use: yes
 comms.channels.1.noise.output.dropout.p: 0.2
 
 comms.channels.2.type: radio
-comms.channels.2.bandwidth: 3000
+comms.channels.2.bandwidth: 1024
 comms.channels.2.noise.input.failure.use: yes
 comms.channels.2.noise.input.failure.p: 0.2
 comms.channels.2.noise.output.dropout.use: yes
 comms.channels.2.noise.output.dropout.p: 0.2
+
+comms.channels.3.type: radio
+comms.channels.3.bandwidth: 2000
+comms.channels.3.noise.input.failure.use: yes
+comms.channels.3.noise.input.failure.p: 0.2
+comms.channels.3.noise.output.dropout.use: yes
+comms.channels.3.noise.output.dropout.p: 0.2
+
+comms.channels.4.type: radio
+comms.channels.4.bandwidth: 4000
+comms.channels.4.noise.input.failure.use: yes
+comms.channels.4.noise.input.failure.p: 0.2
+comms.channels.4.noise.output.dropout.use: yes
+comms.channels.4.noise.output.dropout.p: 0.2
 
 comms.channels.max.platoon: 2
 comms.channels.max.centre: 2
