--- a/maps-2019-modified/Semi/Sakae1/config/comms/comms-01-full.cfg
+++ b/maps-2019-modified/Semi/Sakae1/config/comms/comms-01-full.cfg
@@ -1,4 +1,4 @@
-comms.channels.count: 2
+comms.channels.count: 5
 comms.channels.0.type: voice
 # Range of a voice message in mm
 comms.channels.0.range: 30000
@@ -9,9 +9,17 @@ comms.channels.0.messages.max: 1
 comms.channels.0.noise.input.dropout.use: yes
 comms.channels.0.noise.input.dropout.p: 0.1
 
-# Create 1 high-bandwidth channel
 comms.channels.1.type: radio
-comms.channels.1.bandwidth: 4000
+comms.channels.1.bandwidth: 64
 
-comms.channels.max.platoon: 2
+comms.channels.2.type: radio
+comms.channels.2.bandwidth: 256
+
+comms.channels.3.type: radio
+comms.channels.3.bandwidth: 1024
+
+comms.channels.4.type: radio
+comms.channels.4.bandwidth: 4096
+
+comms.channels.max.platoon: 3
 comms.channels.max.centre: 2
