--- a/maps-2019-modified/Semi/Berlin1/config/comms/comms-02-unreliable.cfg
+++ b/maps-2019-modified/Semi/Berlin1/config/comms/comms-02-unreliable.cfg
@@ -1,4 +1,4 @@
-comms.channels.count: 3
+comms.channels.count: 4
 comms.channels.0.type: voice
 # Range of a voice message in mm
 comms.channels.0.range: 40000
@@ -9,9 +9,8 @@ comms.channels.0.messages.max: 1
 comms.channels.0.noise.input.dropout.use: yes
 comms.channels.0.noise.input.dropout.p: 0.1
 
-# Create 2 high-bandwidth, low-reliability channels
 comms.channels.1.type: radio
-comms.channels.1.bandwidth: 3000
+comms.channels.1.bandwidth: 64
 comms.channels.1.noise.input.failure.use: yes
 comms.channels.1.noise.input.failure.p: 0.2
 comms.channels.1.noise.output.dropout.use: yes
@@ -23,6 +22,13 @@ comms.channels.2.noise.input.failure.use: yes
 comms.channels.2.noise.input.failure.p: 0.2
 comms.channels.2.noise.output.dropout.use: yes
 comms.channels.2.noise.output.dropout.p: 0.2
+
+comms.channels.3.type: radio
+comms.channels.3.bandwidth: 3000
+comms.channels.3.noise.input.failure.use: yes
+comms.channels.3.noise.input.failure.p: 0.2
+comms.channels.3.noise.output.dropout.use: yes
+comms.channels.3.noise.output.dropout.p: 0.2
 
 comms.channels.max.platoon: 2
 comms.channels.max.centre: 2
