--- a/maps-2018-modified/Joao1/config/comms/comms-02-medium.cfg
+++ b/maps-2018-modified/Joao1/config/comms/comms-02-medium.cfg
@@ -1,4 +1,4 @@
-comms.channels.count: 4
+comms.channels.count: 5
 comms.channels.0.type: voice
 # Range of a voice message in mm
 comms.channels.0.range: 30000
@@ -17,18 +17,25 @@ comms.channels.1.noise.output.dropout.use: yes
 comms.channels.1.noise.output.dropout.p: 0.05
 
 comms.channels.2.type: radio
-comms.channels.2.bandwidth: 2000
+comms.channels.2.bandwidth: 3000
 comms.channels.2.noise.input.failure.use: yes
 comms.channels.2.noise.input.failure.p: 0.1
 comms.channels.2.noise.output.dropout.use: yes
 comms.channels.2.noise.output.dropout.p: 0.05
 
 comms.channels.3.type: radio
-comms.channels.3.bandwidth: 2000
+comms.channels.3.bandwidth: 3000
 comms.channels.3.noise.input.failure.use: yes
 comms.channels.3.noise.input.failure.p: 0.1
 comms.channels.3.noise.output.dropout.use: yes
 comms.channels.3.noise.output.dropout.p: 0.05
+
+comms.channels.4.type: radio
+comms.channels.4.bandwidth: 3000
+comms.channels.4.noise.input.failure.use: yes
+comms.channels.4.noise.input.failure.p: 0.1
+comms.channels.4.noise.output.dropout.use: yes
+comms.channels.4.noise.output.dropout.p: 0.05
 
 comms.channels.max.platoon: 1
 comms.channels.max.centre: 2
