--- a/MRL/config/target.cfg
+++ b/MRL/config/target.cfg
@@ -36,3 +36,5 @@ SampleSearch.Clustering.Police : adf.sample.module.algorithm.SampleKMeans
 
 MrlSimpleFireSearch.Clustering.Police : mrl_2019.algorithm.clustering.MrlPoliceKMeans
 MrlRoadDetector.Clustering: adf.sample.module.algorithm.SampleKMeans
+
+SampleVictimSelector.Clustering : mrl_2019.algorithm.clustering.MrlAmbulanceKMeans
