--- a/maps-2020/Sakae2/config/comms/comms-03-mixed.cfg
+++ b/maps-2020/Sakae2/config/comms/comms-03-mixed.cfg
@@ -1,4 +1,4 @@
-comms.channels.count: 4
+comms.channels.count: 6
 comms.channels.0.type: voice
 # Range of a voice message in mm
 comms.channels.0.range: 30000
@@ -10,25 +10,29 @@ comms.channels.0.noise.input.dropout.use: yes
 comms.channels.0.noise.input.dropout.p: 0.1
 
 comms.channels.1.type: radio
-comms.channels.1.bandwidth: 64
+comms.channels.1.bandwidth: 128
 comms.channels.1.noise.input.failure.use: yes
 comms.channels.1.noise.input.failure.p: 0.1
-comms.channels.1.noise.output.dropout.use: yes
-comms.channels.1.noise.output.dropout.p: 0.05
+comms.channels.1.noise.output.failure.use: yes
+comms.channels.1.noise.output.failure.p: 0.05
 
 comms.channels.2.type: radio
-comms.channels.2.bandwidth: 4000
-comms.channels.2.noise.input.failure.use: yes
-comms.channels.2.noise.input.failure.p: 0.1
+comms.channels.2.bandwidth: 1000
 comms.channels.2.noise.output.dropout.use: yes
-comms.channels.2.noise.output.dropout.p: 0.05
+comms.channels.2.noise.output.dropout.p: 0.01
 
 comms.channels.3.type: radio
-comms.channels.3.bandwidth: 4000
-comms.channels.3.noise.input.failure.use: yes
-comms.channels.3.noise.input.failure.p: 0.1
+comms.channels.3.bandwidth: 2000
 comms.channels.3.noise.output.dropout.use: yes
-comms.channels.3.noise.output.dropout.p: 0.05
+comms.channels.3.noise.output.dropout.p: 0.02
 
-comms.channels.max.platoon: 2
+comms.channels.4.type: radio
+comms.channels.4.bandwidth: 2000
+comms.channels.4.noise.output.dropout.use: yes
+comms.channels.4.noise.output.dropout.p: 0.01
+
+comms.channels.5.type: radio
+comms.channels.5.bandwidth: 3000
+
+comms.channels.max.platoon: 1
 comms.channels.max.centre: 2
